--- a/index.html
+++ b/index.html
@@ -36,11 +36,6 @@
       height: auto;
       box-shadow: 0px 4px 6px rgba(0,0,0,0.2);
     }
-    video {
-      margin: 20px auto;
-      border-radius: 10px;
-      box-shadow: 0px 4px 6px rgba(0,0,0,0.2);
-    }
     .whatsapp-btn {
       display: inline-block;
       margin: 20px;
@@ -55,44 +50,47 @@
   </style>
 </head>
 <body>
-
-  <header>💎 Neha's Trinket Box 💎</header>
+<header>💎 Neha's Trinket Box 💎</header>
 
   <h2>✨ Earrings ✨</h2>
   <div class="products">
-    <img src="C:\Users\AMAC\Desktop" alt="Earring">
-    <img src="C:\Users\AMAC\Downloads" alt="Earring">
+    <img src="
+Screenshot_20250930-220919.jpg" alt="Earring">
+    <img src="
+Screenshot_20250930-222142.jpg" alt="Earring">
   </div>
 
-  <h2>naklace</h2>
+  <h2>Nacklace</h2>
   <div class="products">
-    <img src="C:\Users\AMAC\Desktop" alt="naklace">
-    <img src="C:\Users\AMAC\Desktop" alt="naklace">
+    <img src="
+Screenshot_20250930-215956.jpg" alt="nacklace">
+    <img src="
+Screenshot_20250930-220344.jpg" alt="nacklace">
   </div>
 
   <h2>💫 Bracelets 💫</h2>
   <div class="products">
-    <img src="bracelet1.jpg" alt="Bracelet">
-    <img src="bracelet2.jpg" alt="Bracelet">
+    <img src="
+Screenshot_20250930-220702.jpg" alt="Bracelet">
+    <img src="
+Screenshot_20250930-220732.jpg" alt="Bracelet">
   </div>
 
   <h2>🌸 Jhumke 🌸</h2>
   <div class="products">
-    <img src="jhumka1.jpg" alt="Jhumka">
-    <img src="jhumka2.jpg" alt="Jhumka">
+    <img src="
+note_0930_221510159.png" alt="Jhumka">
+    <img src="
+Screenshot_20250930-215450.jpg" alt="Jhumka">
   </div>
 
   <h2>🎀 Hair Accessories 🎀</h2>
   <div class="products">
-    <img src="hair1.jpg" alt="Hair Accessory">
-    <img src="hair2.jpg" alt="Hair Accessory">
+    <img src="
+Screenshot_20250930-221043.jpg" alt="Hair Accessory">
+    <img src="
+Screenshot_20250930-2213.jpg" alt="Hair Accessory">
   </div>
-
-  <h2>🎥 Product Showcase</h2>
-  <video width="320" height="240" controls>
-    <source src="intro.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
 
   <br>
   <a class="whatsapp-btn" href="https://wa.me/917347281108?text=Hello%20Neha!%20I%20want%20to%20order%20from%20your%20Trinket%20Box.">Chat on WhatsApp</a>
